now does pull_reqs

--- a/master.cfg
+++ b/master.cfg
@@ -8,14 +8,26 @@ BB_COMMS_PORT = int(os.environ['BB_COMMS_PORT'])
 
 c['buildbotNetUsageData'] = None
 
+c['title'] = 'Chipyard CI'
+
+c['protocols'] = {'pb': {'port': BB_COMMS_PORT}}
+
+c['buildbotURL'] = f'http://localhost:{BB_ADMIN_PORT}/'
+
+c['www'] = dict(
+        port=BB_ADMIN_PORT,
+        plugins=dict(
+            waterfall_view={True},
+            console_view={True},
+            grid_view={True}),
+        change_hook_dialects={'github':{'secret': None, 'pullrequest_ref':'direct'}})
+
 #----------------------------------------------------------------------
 # setup workers
 #----------------------------------------------------------------------
 worker_sets = [
     ['chipyard-worker-1', 'password'],
-    ['chipyard-worker-2', 'password'],
-    ['chipyard-worker-3', 'password'],
-    ['chipyard-worker-4', 'password']]
+    ['chipyard-worker-2', 'password']]
 
 worker_names = []
 for w in worker_sets:
@@ -46,17 +58,31 @@ spawner_f.addStep(steps.Trigger(schedulerNames=['prep_spawn'], waitForFinish=Tru
 rvtools_s = schedulers.Triggerable(name='rvtools', builderNames=['Build RISC-V Tools'])
 rvtools_f = util.BuildFactory()
 rvtools_f.addStep(checkout)
-rvtools_f.addStep(steps.ShellCommand(command=['.circleci/build-toolchains.sh', 'riscv-tools']))
+rvtools_f.addStep(steps.ShellCommand(command=['ls', '-alh']))
+rvtools_f.addStep(steps.ShellCommand(command=['pwd']))
+rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
+rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/bring-in-cache.sh', 'riscv-tools-install', '$HOME/riscv-tools.hash', '$HOME/riscv-tools-install']))
+rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/build-toolchains.sh', 'riscv-tools']))
+rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'riscv-tools-install', '$HOME/riscv-tools.hash', '$HOME/riscv-tools-install']))
 
 verilator_s = schedulers.Triggerable(name='verilator', builderNames=['Build Verilator'])
 verilator_f = util.BuildFactory()
 verilator_f.addStep(checkout)
-verilator_f.addStep(steps.ShellCommand(command=['.circleci/build-verilator.sh']))
+verilator_f.addStep(steps.ShellCommand(command=['ls', '-alh']))
+verilator_f.addStep(steps.ShellCommand(command=['pwd']))
+verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/bring-in-cache.sh', 'verilator-install', '$HOME/sims/verisim/verilator.mk', '$HOME/project/sims/verisim/verilator']))
+verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/build-verilator.sh']))
+verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'verilator-install', '$HOME/sims/verisim/verilator.mk', '$HOME/project/sims/verisim/verilator']))
 
 esp_tools_s = schedulers.Triggerable(name='esp_tools', builderNames=['Build ESP Tools'])
 esp_tools_f = util.BuildFactory()
 esp_tools_f.addStep(checkout)
-esp_tools_f.addStep(steps.ShellCommand(command=['.circleci/build-toolchains.sh', 'esp-tools']))
+esp_tools_f.addStep(steps.ShellCommand(command=['ls', '-alh']))
+esp_tools_f.addStep(steps.ShellCommand(command=['pwd']))
+esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
+esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/bring-in-cache.sh', 'esp-tools-install', '$HOME/esp-tools.hash', '$HOME/esp-tools-install']))
+esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/build-toolchains.sh', 'esp-tools']))
+esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'esp-tools-install', '$HOME/esp-tools.hash', '$HOME/esp-tools-install']))
 
 prep_spawn_s = schedulers.Triggerable(name='prep_spawn', builderNames=['Spawn Prepare Steps'])
 prep_spawn_f = util.BuildFactory()
@@ -127,72 +153,55 @@ example_test_s = schedulers.Triggerable(name='example_test', builderNames=['Exam
 example_test_f = util.BuildFactory()
 example_test_f.addStep(checkout)
 
-builder_names = [
-    'Spawn Jobs',
-    'Build RISC-V Tools', 
-    'Build Verilator', 
-    'Build ESP Tools',
-    'Spawn Prepare Steps',
-    'Prep. Hwacha',
-    'Prep. BOOM',
-    'Prep. BOOM Example',
-    'Prep. BOOM/Rocket Example',
-    'Prep. Rocket Chip',
-    'Prep. Example',
-    'Hwacha Tests',
-    'BOOM Tests',
-    'BOOM Example Tests',
-    'BOOM/Rocket Tests',
-    'Rocket Chip Tests',
-    'Example Tests'
+def builder(name, factory):
+    return util.BuilderConfig(name=name, factory=factory, workerbuilddir='', workernames=worker_names)
+
+c['builders'] = [
+    builder(name='Spawn Jobs', factory=spawner_f),
+
+    builder(name='Build RISC-V Tools',factory=rvtools_f),
+    builder(name='Build Verilator', factory=verilator_f),
+    builder(name='Build ESP Tools', factory=esp_tools_f),
+
+    builder(name='Spawn Prepare Steps', factory=prep_spawn_f),
+
+    builder(name='Prep. Hwacha', factory=prep_hwacha_f),
+    builder(name='Prep. BOOM', factory=prep_boom_f),
+    builder(name='Prep. BOOM Example', factory=prep_boomexample_f),
+    builder(name='Prep. BOOM/Rocket Example', factory=prep_boomrocketexample_f),
+    builder(name='Prep. Rocket Chip', factory=prep_rocketchip_f),
+    builder(name='Prep. Example', factory=prep_example_f),
+
+    builder(name='Hwacha Tests', factory=hwacha_test_f),
+    builder(name='BOOM Tests', factory=boom_test_f),
+    builder(name='BOOM Example Tests', factory=boomexample_test_f),
+    builder(name='BOOM/Rocket Tests', factory=boomrocketexample_test_f),
+    builder(name='Rocket Chip Tests', factory=rocketchip_test_f),
+    builder(name='Example Tests', factory=example_test_f),
 ]
-
-
-c['builders'] = [ \
-    util.BuilderConfig(name='Spawn Jobs', factory=spawner_f, workernames=worker_names), \
-
-    util.BuilderConfig(name='Build RISC-V Tools', factory=rvtools_f, workernames=worker_names), \
-    util.BuilderConfig(name='Build Verilator', factory=verilator_f, workernames=worker_names), \
-    util.BuilderConfig(name='Build ESP Tools', factory=esp_tools_f, workernames=worker_names), \
-
-    util.BuilderConfig(name='Spawn Prepare Steps', factory=prep_spawn_f, workernames=worker_names), \
-
-    util.BuilderConfig(name='Prep. Hwacha', factory=prep_hwacha_f, workernames=worker_names), \
-    util.BuilderConfig(name='Prep. BOOM', factory=prep_boom_f, workernames=worker_names), \
-    util.BuilderConfig(name='Prep. BOOM Example', factory=prep_boomexample_f, workernames=worker_names), \
-    util.BuilderConfig(name='Prep. BOOM/Rocket Example', factory=prep_boomrocketexample_f, workernames=worker_names), \
-    util.BuilderConfig(name='Prep. Rocket Chip', factory=prep_rocketchip_f, workernames=worker_names), \
-    util.BuilderConfig(name='Prep. Example', factory=prep_example_f, workernames=worker_names), \
-
-    util.BuilderConfig(name='Hwacha Tests', factory=hwacha_test_f, workernames=worker_names), \
-    util.BuilderConfig(name='BOOM Tests', factory=boom_test_f, workernames=worker_names), \
-    util.BuilderConfig(name='BOOM Example Tests', factory=boomexample_test_f, workernames=worker_names), \
-    util.BuilderConfig(name='BOOM/Rocket Tests', factory=boomrocketexample_test_f, workernames=worker_names), \
-    util.BuilderConfig(name='Rocket Chip Tests', factory=rocketchip_test_f, workernames=worker_names), \
-    util.BuilderConfig(name='Example Tests', factory=example_test_f, workernames=worker_names), \
-]
-
 
 #----------------------------------------------------------------------
-spawner = schedulers.AnyBranchScheduler( \
-    name='spawner', \
-    builderNames=['Spawn Jobs'], \
-    change_filter = util.ChangeFilter( \
-        project='abejgonzalez/chipyard'))
 
-#something = schedulers.SingleBranchScheduler( \
-#    name='chipyard', \
-#    change_filter=util.ChangeFilter(project='abejgonzalez/chipyard', branch='master'), \
-#    treeStableTimer=3, \
-#    builderNames=["Spawn Jobs"])
+pull_req_s = schedulers.SingleBranchScheduler(
+    name='pull req scheduler',
+    builderNames=['Spawn Jobs'],
+    treeStableTimer=5,
+    change_filter = util.ChangeFilter(category='pull', project='abejgonzalez/chipyard'))
 
-forcer = schedulers.ForceScheduler( \
-    name="force", \
+master_s = schedulers.SingleBranchScheduler(
+    name='master scheduler',
+    builderNames=['Spawn Jobs'],
+    treeStableTimer=5,
+    change_filter = util.ChangeFilter(project='abejgonzalez/chipyard', branch=['master']))
+
+forcer = schedulers.ForceScheduler(
+    name="force",
     builderNames=['Spawn Jobs'])
 
 c['schedulers'] = [
     forcer,
-    spawner, 
+    master_s,
+    pull_req_s,
     rvtools_s, 
     verilator_s, 
     esp_tools_s, 
@@ -209,19 +218,3 @@ c['schedulers'] = [
     boomrocketexample_test_s,
     rocketchip_test_s,
     example_test_s]
-
-#----------------------------------------------------------------------
-c['protocols'] = {'pb': {'port': BB_COMMS_PORT}}
-
-#----------------------------------------------------------------------
-c['buildbotURL'] = f'http://localhost:{BB_ADMIN_PORT}/'
-
-c['services'] = reporters.GitHubStatusPush(token='sometoken')
-
-#----------------------------------------------------------------------
-c['www'] = dict(port=BB_ADMIN_PORT, \
-                plugins=dict( \
-                    waterfall_view={True}, \
-                    console_view={True}, \
-                    grid_view={True}), \
-                change_hook_dialects={'github':{'secret': None, 'pullrequest_ref':'direct'}})
