--- a/master.cfg
+++ b/master.cfg
@@ -20,7 +20,7 @@ c['www'] = dict(
             waterfall_view={True},
             console_view={True},
             grid_view={True}),
-        change_hook_dialects={'github':{'secret': None, 'pullrequest_ref':'direct'}})
+        change_hook_dialects={'github':{'secret': None, 'pullrequest_ref':'head'}})
 
 #----------------------------------------------------------------------
 # setup workers
@@ -39,14 +39,8 @@ for w in worker_sets:
     c['workers'].append(worker.Worker(w[0], w[1]))
 
 #----------------------------------------------------------------------
-checkout = steps.Git(repourl='git://github.com/abejgonzalez/chipyard.git', mode='incremental')
-
-# checkout files and get the cached riscv-tools and verilator
-def setup(f):
-    f.addStep(checkout)
-    f.addStep(steps.ShellCommand(command=['./circleci/create-hash.sh']))
-    f.addStep(steps.ShellCommand(command=['./circleci/get-riscv-tools.sh']))
-    f.addStep(steps.ShellCommand(command=['./circleci/get-verilator.sh']))
+checkout = steps.Git(repourl='git://github.com/abejgonzalez/chipyard.git')
+cleanup = steps.ShellCommand(command=['rm', '-rf', '../riscv-tools-install', '../esp-tools-install', '../esp-tools.hash', '../riscv-tools.hash', '../env.sh'])
 
 # setup the steps to run
 spawner_f = util.BuildFactory()
@@ -58,31 +52,29 @@ spawner_f.addStep(steps.Trigger(schedulerNames=['prep_spawn'], waitForFinish=Tru
 rvtools_s = schedulers.Triggerable(name='rvtools', builderNames=['Build RISC-V Tools'])
 rvtools_f = util.BuildFactory()
 rvtools_f.addStep(checkout)
-rvtools_f.addStep(steps.ShellCommand(command=['ls', '-alh']))
-rvtools_f.addStep(steps.ShellCommand(command=['pwd']))
+rvtools_f.addStep(steps.ShellCommand(command=['ls', '-alh', '../.']))
 rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
-rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/bring-in-cache.sh', 'riscv-tools-install', '$HOME/riscv-tools.hash', '$HOME/riscv-tools-install']))
+rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
 rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/build-toolchains.sh', 'riscv-tools']))
-rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'riscv-tools-install', '$HOME/riscv-tools.hash', '$HOME/riscv-tools-install']))
+rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
+rvtools_f.addStep(cleanup)
 
 verilator_s = schedulers.Triggerable(name='verilator', builderNames=['Build Verilator'])
 verilator_f = util.BuildFactory()
 verilator_f.addStep(checkout)
-verilator_f.addStep(steps.ShellCommand(command=['ls', '-alh']))
-verilator_f.addStep(steps.ShellCommand(command=['pwd']))
-verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/bring-in-cache.sh', 'verilator-install', '$HOME/sims/verisim/verilator.mk', '$HOME/project/sims/verisim/verilator']))
+verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
 verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/build-verilator.sh']))
-verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'verilator-install', '$HOME/sims/verisim/verilator.mk', '$HOME/project/sims/verisim/verilator']))
+verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
+verilator_f.addStep(cleanup)
 
 esp_tools_s = schedulers.Triggerable(name='esp_tools', builderNames=['Build ESP Tools'])
 esp_tools_f = util.BuildFactory()
 esp_tools_f.addStep(checkout)
-esp_tools_f.addStep(steps.ShellCommand(command=['ls', '-alh']))
-esp_tools_f.addStep(steps.ShellCommand(command=['pwd']))
 esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
-esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/bring-in-cache.sh', 'esp-tools-install', '$HOME/esp-tools.hash', '$HOME/esp-tools-install']))
+esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'esp-tools-install', 'esp-tools.hash', 'esp-tools-install']))
 esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/build-toolchains.sh', 'esp-tools']))
-esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'esp-tools-install', '$HOME/esp-tools.hash', '$HOME/esp-tools-install']))
+esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'esp-tools-install', 'esp-tools.hash', 'esp-tools-install']))
+esp_tools_f.addStep(cleanup)
 
 prep_spawn_s = schedulers.Triggerable(name='prep_spawn', builderNames=['Spawn Prepare Steps'])
 prep_spawn_f = util.BuildFactory()
@@ -92,66 +84,89 @@ prep_spawn_f.addStep(steps.Trigger(schedulerNames=['prep_boomexample'], waitForF
 prep_spawn_f.addStep(steps.Trigger(schedulerNames=['prep_boomrocketexample'], waitForFinish=False))
 prep_spawn_f.addStep(steps.Trigger(schedulerNames=['prep_rocketchip'], waitForFinish=False))
 prep_spawn_f.addStep(steps.Trigger(schedulerNames=['prep_example'], waitForFinish=False))
+prep_spawn_f.addStep(cleanup)
+
+# checkout files and get the cached riscv-tools and verilator
+def prep_steps_add(f, name, next_schedule):
+    f.addStep(checkout)
+    f.addStep(steps.ShellCommand(command=['ls', '-alh', '../.']))
+    # get cached state
+    f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
+    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
+    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
+    # build rtl
+    if name == 'boomrocketexample':
+        f.addStep(steps.ShellCommand(command=['./.buildbot/do-rtl-build.sh', 'SUBPROJECT=example', 'CONFIG=SmallDefaultBoomAndRocketConfig']))
+    else:
+        f.addStep(steps.ShellCommand(command=['./.buildbot/do-rtl-build.sh', 'SUBPROJECT='+name]))
+    # save state
+    f.addStep(steps.ShellCommand(command=['git', 'rev-parse', 'HEAD', '>', '../commit.hash']))
+    f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', name, 'commit.hash', 'build']))
+    f.addStep(cleanup)
+    f.addStep(steps.Trigger(schedulerNames=[next_schedule], waitForFinish=False))
 
 prep_hwacha_s = schedulers.Triggerable(name='prep_hwacha', builderNames=['Prep. Hwacha'])
 prep_hwacha_f = util.BuildFactory()
-prep_hwacha_f.addStep(checkout)
-setup(prep_hwacha_f)
-prep_hwacha_f.addStep(steps.Trigger(schedulerNames=['hwacha_test'], waitForFinish=False))
+prep_steps_add(prep_hwacha_f, 'hwacha', 'hwacha_test')
 
 prep_boom_s = schedulers.Triggerable(name='prep_boom', builderNames=['Prep. BOOM'])
 prep_boom_f = util.BuildFactory()
-prep_boom_f.addStep(checkout)
-setup(prep_hwacha_f)
-prep_boom_f.addStep(steps.Trigger(schedulerNames=['boom_test'], waitForFinish=False))
+prep_steps_add(prep_boom_f, 'boom', 'boom_test')
 
 prep_boomexample_s = schedulers.Triggerable(name='prep_boomexample', builderNames=['Prep. BOOM Example'])
 prep_boomexample_f = util.BuildFactory()
-prep_boomexample_f.addStep(checkout)
-setup(prep_hwacha_f)
-prep_boomexample_f.addStep(steps.Trigger(schedulerNames=['boomexample_test'], waitForFinish=False))
+prep_steps_add(prep_boomexample_f, 'boomexample', 'boomexample_test')
 
 prep_boomrocketexample_s = schedulers.Triggerable(name='prep_boomrocketexample', builderNames=['Prep. BOOM/Rocket Example'])
 prep_boomrocketexample_f = util.BuildFactory()
-prep_boomrocketexample_f.addStep(checkout)
-setup(prep_hwacha_f)
-prep_boomrocketexample_f.addStep(steps.Trigger(schedulerNames=['boomrocketexample_test'], waitForFinish=False))
+prep_steps_add(prep_boomrocketexample_f, 'boomrocketexample', 'boomrocketexample_test')
 
 prep_rocketchip_s = schedulers.Triggerable(name='prep_rocketchip', builderNames=['Prep. Rocket Chip'])
 prep_rocketchip_f = util.BuildFactory()
-prep_rocketchip_f.addStep(checkout)
-setup(prep_hwacha_f)
-prep_rocketchip_f.addStep(steps.Trigger(schedulerNames=['rocketchip_test'], waitForFinish=False))
+prep_steps_add(prep_rocketchip_f, 'rocketchip', 'rocketchip_test')
 
 prep_example_s = schedulers.Triggerable(name='prep_example', builderNames=['Prep. Example'])
 prep_example_f = util.BuildFactory()
-prep_example_f.addStep(checkout)
-setup(prep_hwacha_f)
-prep_example_f.addStep(steps.Trigger(schedulerNames=['example_test'], waitForFinish=False))
+prep_steps_add(prep_example_f, 'example', 'example_test')
+
+def run_test_step(f, name):
+    f.addStep(checkout)
+    f.addStep(steps.ShellCommand(command=['ls', '-alh', '../.']))
+    # get cached state
+    f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
+    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
+    f.addStep(steps.ShellCommand(command=['git', 'rev-parse', 'HEAD', '>', '../commit.hash']))
+    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', name, 'commit.hash', 'build']))
+    # run test
+    if name == 'boomrocketexample':
+        f.addStep(steps.ShellCommand(command=['make', 'run-bmark-tests', '-C', 'sims/verisim', 'SUBPROJECT=example', 'CONFIG=SmallDefaultBoomAndRocketConfig']))
+    else:
+        f.addStep(steps.ShellCommand(command=['make', 'run-bmark-tests', '-C', 'sims/verisim', 'SUB_PROJECT='+name]))
+    f.addStep(cleanup)
 
 hwacha_test_s = schedulers.Triggerable(name='hwacha_test', builderNames=['Hwacha Tests'])
 hwacha_test_f = util.BuildFactory()
-hwacha_test_f.addStep(checkout)
+run_test_step(hwacha_test_f, 'hwacha')
 
 boom_test_s = schedulers.Triggerable(name='boom_test', builderNames=['BOOM Tests'])
 boom_test_f = util.BuildFactory()
-boom_test_f.addStep(checkout)
+run_test_step(boom_test_f, 'boom')
 
 boomexample_test_s = schedulers.Triggerable(name='boomexample_test', builderNames=['BOOM Example Tests'])
 boomexample_test_f = util.BuildFactory()
-boomexample_test_f.addStep(checkout)
+run_test_step(boomexample_test_f, 'boomexample')
 
 boomrocketexample_test_s = schedulers.Triggerable(name='boomrocketexample_test', builderNames=['BOOM/Rocket Tests'])
 boomrocketexample_test_f = util.BuildFactory()
-boomrocketexample_test_f.addStep(checkout)
+run_test_step(boomrocketexample_test_f, 'boomrocketexample')
 
 rocketchip_test_s = schedulers.Triggerable(name='rocketchip_test', builderNames=['Rocket Chip Tests'])
 rocketchip_test_f = util.BuildFactory()
-rocketchip_test_f.addStep(checkout)
+run_test_step(rocketchip_test_f, 'rocketchip')
 
 example_test_s = schedulers.Triggerable(name='example_test', builderNames=['Example Tests'])
 example_test_f = util.BuildFactory()
-example_test_f.addStep(checkout)
+run_test_step(example_test_f, 'example')
 
 def builder(name, factory):
     return util.BuilderConfig(name=name, factory=factory, workerbuilddir='', workernames=worker_names)
