--- a/master.cfg
+++ b/master.cfg
@@ -39,8 +39,67 @@ for w in worker_sets:
     c['workers'].append(worker.Worker(w[0], w[1]))
 
 #----------------------------------------------------------------------
+# setup build steps
+#----------------------------------------------------------------------
 checkout = steps.Git(repourl='git://github.com/abejgonzalez/chipyard.git')
 cleanup = steps.ShellCommand(command=['rm', '-rf', '../riscv-tools-install', '../esp-tools-install', '../esp-tools.hash', '../riscv-tools.hash', '../env.sh'])
+
+all_builders = []
+all_schedulers = []
+
+def builder(name, factory):
+    return util.BuilderConfig(name=name, factory=factory, workerbuilddir='', workernames=worker_names)
+
+def create_prep(builder_name, trigger_name, local_name, next_schedule):
+    # create trigger to spawn build
+    trigger_s = schedulers.Triggerable(name=trigger_name, builderNames=[builder_name])
+
+    # create factory
+    f = util.BuildFactory()
+    f.addStep(checkout)
+    f.addStep(steps.ShellCommand(command=['ls', '-alh', '../.']))
+    # get cached state
+    f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
+    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
+    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
+    # build rtl
+    if local_name == 'boomrocketexample':
+        f.addStep(steps.ShellCommand(command=['./.buildbot/do-rtl-build.sh', 'SUBPROJECT=example', 'CONFIG=SmallDefaultBoomAndRocketConfig']))
+    else:
+        f.addStep(steps.ShellCommand(command=['./.buildbot/do-rtl-build.sh', 'SUBPROJECT='+local_name]))
+    # save state
+    f.addStep(steps.ShellCommand(command=['git', 'rev-parse', 'HEAD', '>', '../commit.hash']))
+    f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', local_name, 'commit.hash', 'build']))
+    f.addStep(cleanup)
+    f.addStep(steps.Trigger(schedulerNames=[next_schedule], waitForFinish=False))
+
+    builder_b = builder(name=builder_name, factory=f)
+    all_builders.append(builder_b)
+    all_schedulers.append(trigger_s)
+
+def create_test(builder_name, trigger_name, local_name):
+    # create trigger to spawn build
+    trigger_s = schedulers.Triggerable(name=trigger_name, builderNames=[builder_name])
+
+    # create factory
+    f = util.BuildFactory()
+    f.addStep(checkout)
+    f.addStep(steps.ShellCommand(command=['ls', '-alh', '../.']))
+    # get cached state
+    f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
+    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
+    f.addStep(steps.ShellCommand(command=['git', 'rev-parse', 'HEAD', '>', '../commit.hash']))
+    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', local_name, 'commit.hash', 'build']))
+    # run test
+    if local_name == 'boomrocketexample':
+        f.addStep(steps.ShellCommand(command=['make', 'run-bmark-tests', '-C', 'sims/verisim', 'SUBPROJECT=example', 'CONFIG=SmallDefaultBoomAndRocketConfig']))
+    else:
+        f.addStep(steps.ShellCommand(command=['make', 'run-bmark-tests', '-C', 'sims/verisim', 'SUB_PROJECT='+local_name]))
+    f.addStep(cleanup)
+
+    builder_b = builder(name=builder_name, factory=f)
+    all_builders.append(builder_b)
+    all_schedulers.append(trigger_s)
 
 # setup the steps to run
 spawner_f = util.BuildFactory()
@@ -52,20 +111,11 @@ spawner_f.addStep(steps.Trigger(schedulerNames=['prep_spawn'], waitForFinish=Tru
 rvtools_s = schedulers.Triggerable(name='rvtools', builderNames=['Build RISC-V Tools'])
 rvtools_f = util.BuildFactory()
 rvtools_f.addStep(checkout)
-rvtools_f.addStep(steps.ShellCommand(command=['ls', '-alh', '../.']))
 rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
 rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
 rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/build-toolchains.sh', 'riscv-tools']))
 rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
 rvtools_f.addStep(cleanup)
-
-verilator_s = schedulers.Triggerable(name='verilator', builderNames=['Build Verilator'])
-verilator_f = util.BuildFactory()
-verilator_f.addStep(checkout)
-verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
-verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/build-verilator.sh']))
-verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
-verilator_f.addStep(cleanup)
 
 esp_tools_s = schedulers.Triggerable(name='esp_tools', builderNames=['Build ESP Tools'])
 esp_tools_f = util.BuildFactory()
@@ -75,6 +125,14 @@ esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh',
 esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/build-toolchains.sh', 'esp-tools']))
 esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'esp-tools-install', 'esp-tools.hash', 'esp-tools-install']))
 esp_tools_f.addStep(cleanup)
+
+verilator_s = schedulers.Triggerable(name='verilator', builderNames=['Build Verilator'])
+verilator_f = util.BuildFactory()
+verilator_f.addStep(checkout)
+verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
+verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/build-verilator.sh']))
+verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
+verilator_f.addStep(cleanup)
 
 prep_spawn_s = schedulers.Triggerable(name='prep_spawn', builderNames=['Spawn Prepare Steps'])
 prep_spawn_f = util.BuildFactory()
@@ -86,92 +144,21 @@ prep_spawn_f.addStep(steps.Trigger(schedulerNames=['prep_rocketchip'], waitForFi
 prep_spawn_f.addStep(steps.Trigger(schedulerNames=['prep_example'], waitForFinish=False))
 prep_spawn_f.addStep(cleanup)
 
-# checkout files and get the cached riscv-tools and verilator
-def prep_steps_add(f, name, next_schedule):
-    f.addStep(checkout)
-    f.addStep(steps.ShellCommand(command=['ls', '-alh', '../.']))
-    # get cached state
-    f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
-    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
-    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
-    # build rtl
-    if name == 'boomrocketexample':
-        f.addStep(steps.ShellCommand(command=['./.buildbot/do-rtl-build.sh', 'SUBPROJECT=example', 'CONFIG=SmallDefaultBoomAndRocketConfig']))
-    else:
-        f.addStep(steps.ShellCommand(command=['./.buildbot/do-rtl-build.sh', 'SUBPROJECT='+name]))
-    # save state
-    f.addStep(steps.ShellCommand(command=['git', 'rev-parse', 'HEAD', '>', '../commit.hash']))
-    f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', name, 'commit.hash', 'build']))
-    f.addStep(cleanup)
-    f.addStep(steps.Trigger(schedulerNames=[next_schedule], waitForFinish=False))
+create_prep(                 'Prepare Hwacha',            'prep_hwacha',            'hwacha',            'hwacha_test')
+create_prep(                   'Prepare BOOM',              'prep_boom',              'boom',              'boom_test')
+create_prep(           'Prepare BOOM Example',       'prep_boomexample',       'boomexample',       'boomexample_test')
+create_prep('Prepare BOOM and Rocket Example', 'prep_boomrocketexample', 'boomrocketexample', 'boomrocketexample_test')
+create_prep(            'Prepare Rocket Chip',        'prep_rocketchip',        'rocketchip',        'rocketchip_test')
+create_prep(                'Prepare Example',           'prep_example',           'example',           'example_test')
 
-prep_hwacha_s = schedulers.Triggerable(name='prep_hwacha', builderNames=['Prep. Hwacha'])
-prep_hwacha_f = util.BuildFactory()
-prep_steps_add(prep_hwacha_f, 'hwacha', 'hwacha_test')
+create_test(                 'Hwacha Tests',            'hwacha_test',            'hwacha')
+create_test(                   'BOOM Tests',              'boom_test',              'boom')
+create_test(           'BOOM Example Tests',       'boomexample_test',       'boomexample')
+create_test('BOOM and Rocket Example Tests', 'boomrocketexample_test', 'boomrocketexample')
+create_test(            'Rocket Chip Tests',        'rocketchip_test',        'rocketchip')
+create_test(                'Example Tests',           'example_test',           'example')
 
-prep_boom_s = schedulers.Triggerable(name='prep_boom', builderNames=['Prep. BOOM'])
-prep_boom_f = util.BuildFactory()
-prep_steps_add(prep_boom_f, 'boom', 'boom_test')
-
-prep_boomexample_s = schedulers.Triggerable(name='prep_boomexample', builderNames=['Prep. BOOM Example'])
-prep_boomexample_f = util.BuildFactory()
-prep_steps_add(prep_boomexample_f, 'boomexample', 'boomexample_test')
-
-prep_boomrocketexample_s = schedulers.Triggerable(name='prep_boomrocketexample', builderNames=['Prep. BOOM/Rocket Example'])
-prep_boomrocketexample_f = util.BuildFactory()
-prep_steps_add(prep_boomrocketexample_f, 'boomrocketexample', 'boomrocketexample_test')
-
-prep_rocketchip_s = schedulers.Triggerable(name='prep_rocketchip', builderNames=['Prep. Rocket Chip'])
-prep_rocketchip_f = util.BuildFactory()
-prep_steps_add(prep_rocketchip_f, 'rocketchip', 'rocketchip_test')
-
-prep_example_s = schedulers.Triggerable(name='prep_example', builderNames=['Prep. Example'])
-prep_example_f = util.BuildFactory()
-prep_steps_add(prep_example_f, 'example', 'example_test')
-
-def run_test_step(f, name):
-    f.addStep(checkout)
-    f.addStep(steps.ShellCommand(command=['ls', '-alh', '../.']))
-    # get cached state
-    f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
-    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
-    f.addStep(steps.ShellCommand(command=['git', 'rev-parse', 'HEAD', '>', '../commit.hash']))
-    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', name, 'commit.hash', 'build']))
-    # run test
-    if name == 'boomrocketexample':
-        f.addStep(steps.ShellCommand(command=['make', 'run-bmark-tests', '-C', 'sims/verisim', 'SUBPROJECT=example', 'CONFIG=SmallDefaultBoomAndRocketConfig']))
-    else:
-        f.addStep(steps.ShellCommand(command=['make', 'run-bmark-tests', '-C', 'sims/verisim', 'SUB_PROJECT='+name]))
-    f.addStep(cleanup)
-
-hwacha_test_s = schedulers.Triggerable(name='hwacha_test', builderNames=['Hwacha Tests'])
-hwacha_test_f = util.BuildFactory()
-run_test_step(hwacha_test_f, 'hwacha')
-
-boom_test_s = schedulers.Triggerable(name='boom_test', builderNames=['BOOM Tests'])
-boom_test_f = util.BuildFactory()
-run_test_step(boom_test_f, 'boom')
-
-boomexample_test_s = schedulers.Triggerable(name='boomexample_test', builderNames=['BOOM Example Tests'])
-boomexample_test_f = util.BuildFactory()
-run_test_step(boomexample_test_f, 'boomexample')
-
-boomrocketexample_test_s = schedulers.Triggerable(name='boomrocketexample_test', builderNames=['BOOM/Rocket Tests'])
-boomrocketexample_test_f = util.BuildFactory()
-run_test_step(boomrocketexample_test_f, 'boomrocketexample')
-
-rocketchip_test_s = schedulers.Triggerable(name='rocketchip_test', builderNames=['Rocket Chip Tests'])
-rocketchip_test_f = util.BuildFactory()
-run_test_step(rocketchip_test_f, 'rocketchip')
-
-example_test_s = schedulers.Triggerable(name='example_test', builderNames=['Example Tests'])
-example_test_f = util.BuildFactory()
-run_test_step(example_test_f, 'example')
-
-def builder(name, factory):
-    return util.BuilderConfig(name=name, factory=factory, workerbuilddir='', workernames=worker_names)
-
-c['builders'] = [
+initial_builders = [
     builder(name='Spawn Jobs', factory=spawner_f),
 
     builder(name='Build RISC-V Tools',factory=rvtools_f),
@@ -179,21 +166,8 @@ c['builders'] = [
     builder(name='Build ESP Tools', factory=esp_tools_f),
 
     builder(name='Spawn Prepare Steps', factory=prep_spawn_f),
-
-    builder(name='Prep. Hwacha', factory=prep_hwacha_f),
-    builder(name='Prep. BOOM', factory=prep_boom_f),
-    builder(name='Prep. BOOM Example', factory=prep_boomexample_f),
-    builder(name='Prep. BOOM/Rocket Example', factory=prep_boomrocketexample_f),
-    builder(name='Prep. Rocket Chip', factory=prep_rocketchip_f),
-    builder(name='Prep. Example', factory=prep_example_f),
-
-    builder(name='Hwacha Tests', factory=hwacha_test_f),
-    builder(name='BOOM Tests', factory=boom_test_f),
-    builder(name='BOOM Example Tests', factory=boomexample_test_f),
-    builder(name='BOOM/Rocket Tests', factory=boomrocketexample_test_f),
-    builder(name='Rocket Chip Tests', factory=rocketchip_test_f),
-    builder(name='Example Tests', factory=example_test_f),
 ]
+c['builders'] = initial_builders + all_builders
 
 #----------------------------------------------------------------------
 
@@ -209,27 +183,45 @@ master_s = schedulers.SingleBranchScheduler(
     treeStableTimer=5,
     change_filter = util.ChangeFilter(project='abejgonzalez/chipyard', branch=['master']))
 
-forcer = schedulers.ForceScheduler(
+forcer_s = schedulers.ForceScheduler(
     name="force",
-    builderNames=['Spawn Jobs'])
+    buttonName='Force Full Build',
+    label='Force Full Build',
+    builderNames=['Spawn Jobs'],
 
-c['schedulers'] = [
-    forcer,
-    master_s,
-    pull_req_s,
-    rvtools_s, 
-    verilator_s, 
-    esp_tools_s, 
-    prep_spawn_s,
-    prep_hwacha_s, 
-    prep_boom_s, 
-    prep_boomexample_s, 
-    prep_boomrocketexample_s,
-    prep_rocketchip_s, 
-    prep_example_s,
-    hwacha_test_s,
-    boom_test_s,
-    boomexample_test_s,
-    boomrocketexample_test_s,
-    rocketchip_test_s,
-    example_test_s]
+    # will generate a text input
+    reason=util.StringParameter(
+        name="reason",
+        label="Reason for build:",
+        required=False,
+        size=80),
+
+    # in case you don't require authentication this will display
+    # input for user to type his name
+    username=util.UserNameParameter(
+        label="Who is starting the build:",
+        size=80),
+
+    codebases=[
+        util.CodebaseParameter(
+            "",
+            label="Main repository",
+            # will generate a combo box
+            branch=util.ChoiceStringParameter(
+            name="branch",
+            choices=["master", "hest"],
+            default="master"),
+
+            # will generate nothing in the form, but revision, repository,
+            # and project are needed by buildbot scheduling system so we
+            # need to pass a value ("")
+            revision=util.FixedParameter(name="revision", default=""),
+            repository=util.FixedParameter(name="repository", default=""),
+            project=util.FixedParameter(name="project", default=""),
+        ),
+    ],
+)
+
+global_schedulers = [forcer_s, master_s, pull_req_s]
+setup_schedulers = [rvtools_s, verilator_s, esp_tools_s, prep_spawn_s]
+c['schedulers'] = global_schedulers + setup_schedulers + all_schedulers
