--- a/master.cfg
+++ b/master.cfg
@@ -27,7 +27,9 @@ c['www'] = dict(
 #----------------------------------------------------------------------
 worker_sets = [
     ['chipyard-worker-1', 'password'],
-    ['chipyard-worker-2', 'password']]
+    ['chipyard-worker-2', 'password'],
+    ['chipyard-worker-3', 'password'],
+    ['chipyard-worker-4', 'password']]
 
 worker_names = []
 for w in worker_sets:
@@ -41,8 +43,8 @@ for w in worker_sets:
 #----------------------------------------------------------------------
 # setup build steps
 #----------------------------------------------------------------------
-checkout = steps.Git(repourl='git://github.com/abejgonzalez/chipyard.git')
-cleanup = steps.ShellCommand(command=['rm', '-rf', '../riscv-tools-install', '../esp-tools-install', '../esp-tools.hash', '../riscv-tools.hash', '../env.sh'])
+checkout = steps.Git(name="Checkout code", haltOnFailure=True, repourl='git://github.com/abejgonzalez/chipyard.git')
+cleanup = steps.ShellCommand(name="Cleanup", haltOnFailure=True, command=['rm', '-rf', '../riscv-tools-install', '../esp-tools-install', '../esp-tools.hash', '../riscv-tools.hash', '../env.sh'])
 
 all_builders = []
 all_schedulers = []
@@ -57,21 +59,21 @@ def create_prep(builder_name, trigger_name, local_name, next_schedule):
     # create factory
     f = util.BuildFactory()
     f.addStep(checkout)
-    f.addStep(steps.ShellCommand(command=['ls', '-alh', '../.']))
+    f.addStep(steps.ShellCommand(name="ls -al", haltOnFailure=True, command=['ls', '-alh', '../.']))
     # get cached state
-    f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
-    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
-    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
+    f.addStep(steps.ShellCommand(name="Create hash", haltOnFailure=True, command=['./.buildbot/create-hash.sh']))
+    f.addStep(steps.ShellCommand(name="Get riscv-tools", haltOnFailure=True, command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
+    f.addStep(steps.ShellCommand(name="Get verilator", haltOnFailure=True, command=['./.buildbot/retrieve-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
     # build rtl
     if local_name == 'boomrocketexample':
-        f.addStep(steps.ShellCommand(command=['./.buildbot/do-rtl-build.sh', 'SUBPROJECT=example', 'CONFIG=SmallDefaultBoomAndRocketConfig']))
+        f.addStep(steps.ShellCommand(name="Create RTL", haltOnFailure=True, command=['./.buildbot/do-rtl-build.sh', 'SUBPROJECT=example', 'CONFIG=SmallDefaultBoomAndRocketConfig']))
     else:
-        f.addStep(steps.ShellCommand(command=['./.buildbot/do-rtl-build.sh', 'SUBPROJECT='+local_name]))
+        f.addStep(steps.ShellCommand(name="Create RTL", haltOnFailure=True, command=['./.buildbot/do-rtl-build.sh', 'SUBPROJECT='+local_name]))
     # save state
-    f.addStep(steps.ShellCommand(command=['git', 'rev-parse', 'HEAD', '>', '../commit.hash']))
-    f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', local_name, 'commit.hash', 'build']))
+    f.addStep(steps.ShellCommand(name="git rev-parse", haltOnFailure=True, command=['git', 'rev-parse', 'HEAD', '>', '../commit.hash']))
+    f.addStep(steps.ShellCommand(name="Save RTL", haltOnFailure=True, command=['./.buildbot/save-cache.sh', local_name, 'commit.hash', 'build']))
     f.addStep(cleanup)
-    f.addStep(steps.Trigger(schedulerNames=[next_schedule], waitForFinish=False))
+    f.addStep(steps.Trigger(name="Start RTL tests", haltOnFailure=True, schedulerNames=[next_schedule], waitForFinish=False))
 
     builder_b = builder(name=builder_name, factory=f)
     all_builders.append(builder_b)
@@ -84,17 +86,17 @@ def create_test(builder_name, trigger_name, local_name):
     # create factory
     f = util.BuildFactory()
     f.addStep(checkout)
-    f.addStep(steps.ShellCommand(command=['ls', '-alh', '../.']))
+    f.addStep(steps.ShellCommand(name="ls -al", haltOnFailure=True, command=['ls', '-alh', '../.']))
     # get cached state
-    f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
-    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
-    f.addStep(steps.ShellCommand(command=['git', 'rev-parse', 'HEAD', '>', '../commit.hash']))
-    f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', local_name, 'commit.hash', 'build']))
+    f.addStep(steps.ShellCommand(name="Create hash", haltOnFailure=True, command=['./.buildbot/create-hash.sh']))
+    f.addStep(steps.ShellCommand(name="Get riscv-tools", haltOnFailure=True, command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
+    f.addStep(steps.ShellCommand(name="git rev-parse", haltOnFailure=True, command=['git', 'rev-parse', 'HEAD', '>', '../commit.hash']))
+    f.addStep(steps.ShellCommand(name="Get RTL", haltOnFailure=True, command=['./.buildbot/retrieve-cache.sh', local_name, 'commit.hash', 'build']))
     # run test
     if local_name == 'boomrocketexample':
-        f.addStep(steps.ShellCommand(command=['make', 'run-bmark-tests', '-C', 'sims/verisim', 'SUBPROJECT=example', 'CONFIG=SmallDefaultBoomAndRocketConfig']))
+        f.addStep(steps.ShellCommand(name="Run tests", haltOnFailure=True, command=['make', 'run-bmark-tests', '-C', 'sims/verisim', 'SUBPROJECT=example', 'CONFIG=SmallDefaultBoomAndRocketConfig']))
     else:
-        f.addStep(steps.ShellCommand(command=['make', 'run-bmark-tests', '-C', 'sims/verisim', 'SUB_PROJECT='+local_name]))
+        f.addStep(steps.ShellCommand(name="Run tests", haltOnFailure=True, command=['make', 'run-bmark-tests', '-C', 'sims/verisim', 'SUB_PROJECT='+local_name]))
     f.addStep(cleanup)
 
     builder_b = builder(name=builder_name, factory=f)
@@ -103,45 +105,45 @@ def create_test(builder_name, trigger_name, local_name):
 
 # setup the steps to run
 spawner_f = util.BuildFactory()
-spawner_f.addStep(steps.Trigger(schedulerNames=['rvtools'], waitForFinish=True))
-spawner_f.addStep(steps.Trigger(schedulerNames=['verilator'], waitForFinish=True))
-spawner_f.addStep(steps.Trigger(schedulerNames=['esp_tools'], waitForFinish=True))
-spawner_f.addStep(steps.Trigger(schedulerNames=['prep_spawn'], waitForFinish=True))
+spawner_f.addStep(steps.Trigger(name="Spawn riscv-tools build", haltOnFailure=True, schedulerNames=['rvtools'], waitForFinish=True))
+spawner_f.addStep(steps.Trigger(name="Spawn verilator build", haltOnFailure=True, schedulerNames=['verilator'], waitForFinish=True))
+spawner_f.addStep(steps.Trigger(name="Spawn esp-tools build", haltOnFailure=True, schedulerNames=['esp_tools'], waitForFinish=True))
+spawner_f.addStep(steps.Trigger(name="Spawn RTL builds/tests", haltOnFailure=True, schedulerNames=['prep_spawn'], waitForFinish=False))
 
 rvtools_s = schedulers.Triggerable(name='rvtools', builderNames=['Build RISC-V Tools'])
 rvtools_f = util.BuildFactory()
 rvtools_f.addStep(checkout)
-rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
-rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
-rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/build-toolchains.sh', 'riscv-tools']))
-rvtools_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
+rvtools_f.addStep(steps.ShellCommand(name="Create hash", haltOnFailure=True, command=['./.buildbot/create-hash.sh']))
+rvtools_f.addStep(steps.ShellCommand(name="Get riscv-tools", haltOnFailure=True, command=['./.buildbot/retrieve-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
+rvtools_f.addStep(steps.ShellCommand(name="Build riscv-tools", haltOnFailure=True, command=['./.buildbot/build-toolchains.sh', 'riscv-tools']))
+rvtools_f.addStep(steps.ShellCommand(name="Save riscv-tools", haltOnFailure=True, command=['./.buildbot/save-cache.sh', 'riscv-tools-install', 'riscv-tools.hash', 'riscv-tools-install']))
 rvtools_f.addStep(cleanup)
 
 esp_tools_s = schedulers.Triggerable(name='esp_tools', builderNames=['Build ESP Tools'])
 esp_tools_f = util.BuildFactory()
 esp_tools_f.addStep(checkout)
-esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/create-hash.sh']))
-esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'esp-tools-install', 'esp-tools.hash', 'esp-tools-install']))
-esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/build-toolchains.sh', 'esp-tools']))
-esp_tools_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'esp-tools-install', 'esp-tools.hash', 'esp-tools-install']))
+esp_tools_f.addStep(steps.ShellCommand(name="Create hash", haltOnFailure=True, command=['./.buildbot/create-hash.sh']))
+esp_tools_f.addStep(steps.ShellCommand(name="Get esp-tools", haltOnFailure=True, command=['./.buildbot/retrieve-cache.sh', 'esp-tools-install', 'esp-tools.hash', 'esp-tools-install']))
+esp_tools_f.addStep(steps.ShellCommand(name="Build esp-tools", haltOnFailure=True, command=['./.buildbot/build-toolchains.sh', 'esp-tools']))
+esp_tools_f.addStep(steps.ShellCommand(name="Save esp-tools", haltOnFailure=True, command=['./.buildbot/save-cache.sh', 'esp-tools-install', 'esp-tools.hash', 'esp-tools-install']))
 esp_tools_f.addStep(cleanup)
 
 verilator_s = schedulers.Triggerable(name='verilator', builderNames=['Build Verilator'])
 verilator_f = util.BuildFactory()
 verilator_f.addStep(checkout)
-verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/retrieve-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
-verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/build-verilator.sh']))
-verilator_f.addStep(steps.ShellCommand(command=['./.buildbot/save-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
+verilator_f.addStep(steps.ShellCommand(name="Get verilator", haltOnFailure=True, command=['./.buildbot/retrieve-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
+verilator_f.addStep(steps.ShellCommand(name="Build verilator", haltOnFailure=True, command=['./.buildbot/build-verilator.sh']))
+verilator_f.addStep(steps.ShellCommand(name="Save verilator", haltOnFailure=True, command=['./.buildbot/save-cache.sh', 'verilator-install', 'build/sims/verisim/verilator.mk', 'build/sims/verisim/verilator']))
 verilator_f.addStep(cleanup)
 
 prep_spawn_s = schedulers.Triggerable(name='prep_spawn', builderNames=['Spawn Prepare Steps'])
 prep_spawn_f = util.BuildFactory()
-prep_spawn_f.addStep(steps.Trigger(schedulerNames=['prep_hwacha'], waitForFinish=False))
-prep_spawn_f.addStep(steps.Trigger(schedulerNames=['prep_boom'], waitForFinish=False))
-prep_spawn_f.addStep(steps.Trigger(schedulerNames=['prep_boomexample'], waitForFinish=False))
-prep_spawn_f.addStep(steps.Trigger(schedulerNames=['prep_boomrocketexample'], waitForFinish=False))
-prep_spawn_f.addStep(steps.Trigger(schedulerNames=['prep_rocketchip'], waitForFinish=False))
-prep_spawn_f.addStep(steps.Trigger(schedulerNames=['prep_example'], waitForFinish=False))
+prep_spawn_f.addStep(steps.Trigger(name="Spawn Hwacha RTL build", haltOnFailure=True, schedulerNames=['prep_hwacha'], waitForFinish=False))
+prep_spawn_f.addStep(steps.Trigger(name="Spawn BOOM RTL build", haltOnFailure=True, schedulerNames=['prep_boom'], waitForFinish=False))
+prep_spawn_f.addStep(steps.Trigger(name="Spawn BOOM Example RTL build", haltOnFailure=True, schedulerNames=['prep_boomexample'], waitForFinish=False))
+prep_spawn_f.addStep(steps.Trigger(name="Spawn BOOM Rocket RTL build", haltOnFailure=True, schedulerNames=['prep_boomrocketexample'], waitForFinish=False))
+prep_spawn_f.addStep(steps.Trigger(name="Spawn Rocket Chip RTL build", haltOnFailure=True, schedulerNames=['prep_rocketchip'], waitForFinish=False))
+prep_spawn_f.addStep(steps.Trigger(name="Spawn Example RTL build", haltOnFailure=True, schedulerNames=['prep_example'], waitForFinish=False))
 prep_spawn_f.addStep(cleanup)
 
 create_prep(                 'Prepare Hwacha',            'prep_hwacha',            'hwacha',            'hwacha_test')
